<resources>
    <string name="app_name">Innoreva ResourceManager</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_domain">Domain List</string>
    <string name="menu_about">About</string>
    <string name="title_activity_domain_tabbed">DomainTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_of_things">Internet of Things</string>
    <string name="web_development">Web Development</string>
    <string name="android_development">Android Development</string>
    <string name="machine_learning">Machine Learning</string>
</resources>